[gd_scene load_steps=7 format=3 uid="uid://dvqsw06viu77v"]

[ext_resource type="Script" path="res://entity/EntityBase.gd" id="1_ow3mw"]
[ext_resource type="PackedScene" uid="uid://crqwjdylryg34" path="res://overlap/hurtbox.tscn" id="2_nly6d"]
[ext_resource type="PackedScene" uid="uid://do3ui1a8cytt4" path="res://overlap/hitbox.tscn" id="3_x0ygi"]
[ext_resource type="PackedScene" uid="uid://b2k6c6y7hm7m" path="res://UI/entity_health_bar.tscn" id="4_ipfn4"]
[ext_resource type="Texture2D" uid="uid://ct0var033cwim" path="res://UI/Pxiel Art UI borders.png" id="5_ypmnd"]
[ext_resource type="PackedScene" uid="uid://cblg5lp254gx5" path="res://UI/player_healthbar.tscn" id="6_fft6f"]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_ow3mw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource("2_nly6d")]

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Sprite2D"]

[node name="Hitbox" parent="Sprite2D" instance=ExtResource("3_x0ygi")]

[node name="EntityDetector" type="RayCast2D" parent="Sprite2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")

[node name="EntityHealthBar" parent="." instance=ExtResource("4_ipfn4")]

[node name="CanvasGroup" type="CanvasGroup" parent="."]
position = Vector2(123, 588)

[node name="HUD" type="CanvasLayer" parent="CanvasGroup"]

[node name="Item1" type="Sprite2D" parent="CanvasGroup/HUD"]
texture_filter = 2
position = Vector2(100, 544.55)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_ypmnd")
hframes = 3
vframes = 3

[node name="Item2" type="Sprite2D" parent="CanvasGroup/HUD"]
texture_filter = 2
position = Vector2(179, 544.55)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_ypmnd")
hframes = 3
vframes = 3

[node name="TextureProgressBar" parent="CanvasGroup/HUD" instance=ExtResource("6_fft6f")]
offset_left = 18.0
offset_top = 565.55
offset_right = 131.0
offset_bottom = 605.55

[connection signal="died" from="." to="." method="_on_died"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="Hurtbox"]
[editable path="Sprite2D/Hitbox"]
